--- a/style.css
+++ b/style.css
@@ -8,14 +8,19 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+
+
+/*/// Guesses grid ///*/
+
 .words-grid {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 70%;
 }
 
 .row {
@@ -30,4 +35,30 @@ body {
   height: 50px;
   border: 1px solid black;
   margin: 0px 5px 0px 5px;
+}
+
+
+
+/*/// Keyboard ///*/
+
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 30%;
+}
+
+.key-row {
+  display: flex;
+  width: 100%;
+  height: 60px;
+}
+
+.key {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 60px;
+  border: 1px solid black;
 }
