--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  box-sizing: border-box;
 }
 
 .content {
@@ -13,21 +16,32 @@ body {
   justify-content: center;
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 30px;
+  height: 10%
+}
 
 
 /*/// Guesses grid ///*/
 
-.words-grid {
+.word-grid {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 70%;
+  height: 53%;
+  margin-bottom: 50px;
 }
 
 .row {
   display: flex;
-  width: 100%;
   height: 50px;
-  margin: 15px;
+  margin: 15px 0px;
 }
 
 .cell {
@@ -35,6 +49,7 @@ body {
   height: 50px;
   border: 1px solid black;
   margin: 0px 5px 0px 5px;
+  border-radius: 5px;
 }
 
 
@@ -44,21 +59,35 @@ body {
 .keyboard {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
   width: 100%;
-  height: 30%;
+  height: 27%;
 }
 
 .key-row {
   display: flex;
   width: 100%;
   height: 60px;
+  justify-content: space-between;
+}
+
+.key-row.middle {
+  padding: 0px 12px
 }
 
 .key {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 60px;
+  width: 24px;
+  height: 48px;
   border: 1px solid black;
+  font-size: 14px;
+  border-radius: 5px;
+
+}
+
+.key.wide {
+  width: 48px;
 }
