--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -34,22 +35,21 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 53%;
-  margin-bottom: 50px;
+  height: 400px;
 }
 
 .row {
   display: flex;
-  height: 50px;
-  margin: 15px 0px;
+  height: 60px;
+  margin: 4px 0px;
 }
 
 .cell {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border: 1px solid black;
-  margin: 0px 5px 0px 5px;
-  border-radius: 5px;
+  margin: 0px 2px 0px 2px;
+  border-radius: 2px;
 }
 
 
@@ -59,17 +59,15 @@ body {
 .keyboard {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   padding: 20px;
   width: 100%;
-  height: 27%;
 }
 
 .key-row {
   display: flex;
   width: 100%;
-  height: 60px;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 
 .key-row.middle {
@@ -80,12 +78,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 24px;
+  width: 36px;
   height: 48px;
   border: 1px solid black;
   font-size: 14px;
-  border-radius: 5px;
-
+  border-radius: 4px;
+  margin: 4px;
 }
 
 .key.wide {
