--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body {
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 60px;
   height: 60px;
   border: 1px solid black;
