--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  color: rgb(40, 40, 40)
 }
 
 body {
@@ -22,7 +23,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  font-size: 30px;
+  font-size: 40px;
   height: 10%
 }
 
@@ -50,9 +51,9 @@ body {
   align-items: center;
   width: 60px;
   height: 60px;
-  border: 1px solid black;
+  border: 2px solid rgb(40, 40, 40);
   margin: 0px 2px 0px 2px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
 
@@ -83,9 +84,9 @@ body {
   justify-content: center;
   width: 36px;
   height: 48px;
-  border: 1px solid black;
-  font-size: 14px;
-  border-radius: 4px;
+  border: 2px solid rgb(40, 40, 40);
+  font-size: 18px;
+  border-radius: 8px;
   margin: 4px;
   transition: all 0.5s
 }
