--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  font-weight: 700;
 }
 
 .content {
@@ -54,6 +55,7 @@ body {
   border: 2px solid rgb(40, 40, 40);
   margin: 0px 2px 0px 2px;
   border-radius: 4px;
+  font-size: 40px;
 }
 
 
