--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   margin: 0px 2px 0px 2px;
   border-radius: 4px;
   font-size: 40px;
+  transition: all 0.2s;
 }
 
 
@@ -118,4 +119,9 @@ body {
 i {
   position: relative;
   z-index: -1;
+}
+
+.blocked {
+  background-color: red;
+  transition: all 0.2s
 }
