--- a/style.css
+++ b/style.css
@@ -125,3 +125,37 @@ i {
   background-color: red;
   transition: all 0.2s
 }
+
+
+.overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  transition: opacity 0.5s;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-info {
+  background-color: green;
+  color: white;
+  width: 250px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  font-size: 30px;
+  letter-spacing: 4px;
+}
+
+.game-end {
+  transition: opacity 0.5s;
+  opacity: 1;
+}
