--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(40, 40, 40)
+  color: rgb(30, 30, 30)
 }
 
 body {
@@ -13,7 +13,7 @@ body {
 .content {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: 85vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -25,7 +25,10 @@ body {
   justify-content: center;
   width: 100%;
   font-size: 40px;
-  height: 10%
+  height: 12vh;
+  margin-bottom: 20px;
+  border-bottom: 2px solid gray;
+  background-color: rgba(121, 121, 121, 0.2);
 }
 
 
@@ -52,7 +55,8 @@ body {
   align-items: center;
   width: 60px;
   height: 60px;
-  border: 2px solid rgb(40, 40, 40);
+  border: 2px solid gray;
+;
   margin: 0px 2px 0px 2px;
   border-radius: 4px;
   font-size: 40px;
@@ -87,7 +91,7 @@ body {
   justify-content: center;
   width: 40px;
   height: 48px;
-  border: 2px solid rgb(40, 40, 40);
+  border: 2px solid gray;
   font-size: 18px;
   border-radius: 8px;
   margin: 2px;
