--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: scroll;
+  padding-top: 20px;
 }
 
 .heading {
@@ -26,9 +28,8 @@ body {
   width: 100%;
   font-size: 40px;
   height: 12vh;
-  margin-bottom: 20px;
   border-bottom: 2px solid gray;
-  background-color: rgba(121, 121, 121, 0.2);
+  background-color: rgba(0, 119, 183, 0.6);
 }
 
 
@@ -70,7 +71,7 @@ body {
 .keyboard {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 10px 0 10px;
   width: 100%;
 }
 
@@ -103,19 +104,19 @@ body {
 }
 
 .incorrect {
-  background-color: gray;
+  background-color: rgb(150, 150, 150);
   color: white;
   transition: all 0.5s
 }
 
 .correct {
-  background-color: green;
+  background-color: rgb(0, 119, 183);
   color: white;
   transition: all 0.5s
 }
 
 .almost {
-  background-color: rgb(244, 218, 20);
+  background-color: rgb(255, 169, 20);
   color: white;
   transition: all 0.5s
 }
@@ -126,7 +127,7 @@ i {
 }
 
 .blocked {
-  background-color: red;
+  background-color: rgb(255, 77, 0);
   transition: all 0.2s
 }
 
@@ -147,7 +148,7 @@ i {
 }
 
 .overlay-info {
-  background-color: green;
+  background-color: rgb(0, 119, 183);
   color: white;
   width: 250px;
   height: 100px;
