--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+html {
+  background-color: rgba(0, 119, 183, 0.6)
+}
+
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
