--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   justify-content: flex-start;
   overflow: scroll;
   padding-top: 30px;
-  background: linear-gradient(rgba(0, 119, 183, 0.1), rgba(0, 139, 213, 0.3));
+  background: linear-gradient(rgba(0, 119, 183, 0), rgba(0, 139, 213, 0.1));
 }
 
 .heading {
@@ -34,7 +34,6 @@ body {
   font-size: 40px;
   height: 12vh;
   border-bottom: 2px solid gray;
-  background-color: rgba(0, 119, 183, 0.6);
 }
 
 
@@ -102,6 +101,7 @@ body {
   border-radius: 8px;
   margin: 2px;
   transition: all 0.5s;
+  z-index: 2
 }
 
 .key.wide {
@@ -128,7 +128,7 @@ body {
 
 i {
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 .blocked {
@@ -147,7 +147,7 @@ i {
   transition: opacity 0.5s;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 3;
   justify-content: center;
   align-items: center;
 }
