--- a/public/style.css
+++ b/public/style.css
@@ -115,7 +115,7 @@ body {
 }
 
 .correct {
-  background-color: rgb(0, 119, 183);
+  background-color: rgb(0, 119, 183) !important;
   color: white;
   transition: all 0.5s
 }
