moved end overlay into a partial, did some renaming

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,12 +15,8 @@
   </div>
 
   <div class="content">
-    <div class="overlay">
-      <div class="overlay-info">
 
-      </div>
-    </div>
-
+    {{>end}}
 
     <div class="word-grid">
 
