--- a/public/style.css
+++ b/public/style.css
@@ -152,7 +152,7 @@ i {
   align-items: center;
 }
 
-.overlay-info {
+.overlay-details {
   background-color: rgb(0, 119, 183);
   color: white;
   width: 250px;
