--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,13 +10,18 @@
   <title>Wordln't</title>
 </head>
 <body>
-  <div class="heading">
-    WORDLN'T
+  <div class="header">
+    <div class="icon-left"></div>
+    <div class="heading">WORDLN'T</div>
+    <div class="icon-right">
+      <i class="far fa-question-circle info-button"></i>
+    </div>
   </div>
 
   <div class="content">
 
     {{>end}}
+    {{>info}}
 
     <div class="word-grid">
 
