--- a/public/style.css
+++ b/public/style.css
@@ -34,18 +34,20 @@ body {
   font-size: 40px;
   height: 10vh;
   border-bottom: 2px solid gray;
+  font-size: 45px;
 }
 
 .icon-right {
   width: 40px;
   height: 40px;
-  margin-right: 40px;
+  margin-right: 20px;
+  font-size: 40px;
 }
 
 .icon-left {
   width: 40px;
   height: 40px;
-  margin-right: 40px;
+  margin-right: 20px;
 }
 
 .icon {
