--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,13 @@ body {
   font-size: 45px;
 }
 
+.heading {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .icon-right {
   width: 40px;
   height: 40px;
