made info icon a bit smaller

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
 <body>
   <div class="header">
     <div class="icon-left"></div>
-    <div class="heading"><span>WORDLN'T</span></div>
+    <div class="heading">WORDLN'T</div>
     <div class="icon-right">
       <i class="far fa-question-circle info-button"></i>
     </div>
