trimmed message a bit more, changed header spacing a bit

--- a/templates/partials/info.hbs
+++ b/templates/partials/info.hbs
@@ -1,8 +1,6 @@
 <div class="info overlay">
   <div class="info overlay-details">
-    Hi! This is my version of Wordle, a popular word guessing game (but you probably already know that). Since it's my own code and
-    I'm not looking to profit off of this in any way, I think having it out in the wild is fair game (although
-    I'm sure some people will have other ideas).
+    Hi! This is my version of Wordle, a popular word guessing game (but you probably already know that).
 
     <br><br>
 
