--- a/public/style.css
+++ b/public/style.css
@@ -45,15 +45,21 @@ body {
 }
 
 .icon-right {
-  width: 40px;
+  width: 30%;
   height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 20px;
   font-size: 35px;
 }
 
 .icon-left {
-  width: 40px;
+  width: 30%;
   height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 20px;
 }
 
