trying 'minimal-ui' tag

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="apple-mobile-web-app-status-bar-style" content="rgba(0, 119, 183, 0.6)">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/999a85aa00.js" crossorigin="anonymous"></script>
