--- a/templates/partials/end.hbs
+++ b/templates/partials/end.hbs
@@ -1,5 +1,11 @@
 <div class="end overlay">
   <div class="end overlay-details">
+    <div class="end-word">
 
+    </div>
+    <div class="end-timer">
+      Next word in <br><span class="next-timer"></span>
+    </div>
   </div>
+
 </div>
