--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="apple-mobile-web-app-status-bar-style" content="rgba(0, 119, 183, 0.6)">
+  <meta property="og:title" content="Wordlnt">
+  <meta property="og:description" content="A game of words that definitely isn't Wordle.">
+  <meta property="og:image" content="https://wordlnt.herokuapp.com/thumbnailimageforwebsitepreviews">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/999a85aa00.js" crossorigin="anonymous"></script>
   <title>Wordln't</title>
