--- a/templates/partials/info.hbs
+++ b/templates/partials/info.hbs
@@ -4,7 +4,7 @@
 
     <br><br>
 
-    As far as I'm aware Josh Wardle is the original creator of this game - he's the creator of the version that inspired
-    this one at any rate.
+    As far as I'm aware, turning Jotto into a game like was Josh Wardle's idea - he's the creator of the version that inspired
+    this one at any rate, so credit to him where it's due.
   </div>
 </div>
