--- a/templates/partials/info.hbs
+++ b/templates/partials/info.hbs
@@ -1,6 +1,6 @@
 <div class="info overlay">
   <div class="info overlay-details">
-    Hi! This is my version of Wordle, a popular word guessing game (but you probably already know that).
+    Hi! This is my version of Wordle/Jotto, a popular word guessing game (but you probably already know that).
 
     <br><br>
 
