started refactoring css to used BEM format

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,10 +14,10 @@
 </head>
 <body>
   <div class="header">
-    <div class="icon-left"></div>
-    <div class="heading">WORDLN'T</div>
-    <div class="icon-right">
-      <i class="far fa-question-circle info-button"></i>
+    <div class="header__icon-left"></div>
+    <div class="header__heading">WORDLN'T</div>
+    <div class="header__icon-right">
+      <i class="far fa-question-circle icon-right__info-button"></i>
     </div>
   </div>
 
@@ -28,7 +28,7 @@
 
     <div class="word-grid">
 
-      <div class="row first guess">
+      <div class="word-grid__row word-grid__guess first">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -36,7 +36,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row second guess">
+      <div class="word-grid__row word-grid__guess second">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -44,7 +44,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row third guess">
+      <div class="word-grid__row word-grid__guess third">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -52,7 +52,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row fourth guess">
+      <div class="word-grid__row word-grid__guess fourth">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -60,7 +60,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row fifth guess">
+      <div class="word-grid__row word-grid__guess fifth">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -68,7 +68,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row sixth guess">
+      <div class="word-grid__row word-grid__guess sixth">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
