--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ body {
   background: linear-gradient(white, rgb(186, 220, 255));
 }
 
-.header{
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,14 +37,14 @@ body {
   font-size: 45px;
 }
 
-.heading {
+.header__heading {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.icon-right {
+.header__icon-right {
   width: 30%;
   height: 40px;
   display: flex;
@@ -53,7 +53,7 @@ body {
   font-size: 35px;
 }
 
-.icon-left {
+.header__icon-left {
   width: 30%;
   height: 40px;
   display: flex;
@@ -61,19 +61,7 @@ body {
   align-items: center;
 }
 
-.icon {
-  border: 1px solid black;
-  height: 40px;
-  width: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid gray;
-  border-radius: 999em;
-  font-size: 20px;
-}
-
-.info-button:hover {
+.icon-right__info-button:hover {
   cursor: pointer;
 }
 
@@ -88,7 +76,7 @@ body {
   height: 400px;
 }
 
-.row {
+.word-grid__row {
   display: flex;
   height: 60px;
   margin: 4px 0px;
