--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -29,89 +29,89 @@
     <div class="word-grid">
 
       <div class="word-grid__row word-grid__guess first">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
       <div class="word-grid__row word-grid__guess second">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
       <div class="word-grid__row word-grid__guess third">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
       <div class="word-grid__row word-grid__guess fourth">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
       <div class="word-grid__row word-grid__guess fifth">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
       <div class="word-grid__row word-grid__guess sixth">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
+        <div class="row__cell"></div>
       </div>
 
     </div>
     <div class="keyboard">
 
-      <div class="key-row">
-        <div class="key" data-key="Q">Q</div>
-        <div class="key" data-key="W">W</div>
-        <div class="key" data-key="E">E</div>
-        <div class="key" data-key="R">R</div>
-        <div class="key" data-key="T">T</div>
-        <div class="key" data-key="Y">Y</div>
-        <div class="key" data-key="U">U</div>
-        <div class="key" data-key="I">I</div>
-        <div class="key" data-key="O">O</div>
-        <div class="key" data-key="P">P</div>
+      <div class="keyboard__row">
+        <div class="row__key" data-key="Q">Q</div>
+        <div class="row__key" data-key="W">W</div>
+        <div class="row__key" data-key="E">E</div>
+        <div class="row__key" data-key="R">R</div>
+        <div class="row__key" data-key="T">T</div>
+        <div class="row__key" data-key="Y">Y</div>
+        <div class="row__key" data-key="U">U</div>
+        <div class="row__key" data-key="I">I</div>
+        <div class="row__key" data-key="O">O</div>
+        <div class="row__key" data-key="P">P</div>
       </div>
-      <div class="key-row middle">
-        <div class="key" data-key="A">A</div>
-        <div class="key" data-key="S">S</div>
-        <div class="key" data-key="D">D</div>
-        <div class="key" data-key="F">F</div>
-        <div class="key" data-key="G">G</div>
-        <div class="key" data-key="H">H</div>
-        <div class="key" data-key="J">J</div>
-        <div class="key" data-key="K">K</div>
-        <div class="key" data-key="L">L</div>
+      <div class="keyboard__row row__middle">
+        <div class="row__key" data-key="A">A</div>
+        <div class="row__key" data-key="S">S</div>
+        <div class="row__key" data-key="D">D</div>
+        <div class="row__key" data-key="F">F</div>
+        <div class="row__key" data-key="G">G</div>
+        <div class="row__key" data-key="H">H</div>
+        <div class="row__key" data-key="J">J</div>
+        <div class="row__key" data-key="K">K</div>
+        <div class="row__key" data-key="L">L</div>
       </div>
-      <div class="key-row">
-        <div class="key wide" data-key="turn"><i class="far fa-check-circle" data-key="turn"></i></div>
-        <div class="key" data-key="Z">Z</div>
-        <div class="key" data-key="X">X</div>
-        <div class="key" data-key="C">C</div>
-        <div class="key" data-key="V">V</div>
-        <div class="key" data-key="B">B</div>
-        <div class="key" data-key="N">N</div>
-        <div class="key" data-key="M">M</div>
-        <div class="key wide" data-key="del"><i class="far fa-times-circle" data-key="del"></i></div>
+      <div class="keyboard__row">
+        <div class="row__key wide" data-key="turn"><i class="far fa-check-circle" data-key="turn"></i></div>
+        <div class="row__key" data-key="Z">Z</div>
+        <div class="row__key" data-key="X">X</div>
+        <div class="row__key" data-key="C">C</div>
+        <div class="row__key" data-key="V">V</div>
+        <div class="row__key" data-key="B">B</div>
+        <div class="row__key" data-key="N">N</div>
+        <div class="row__key" data-key="M">M</div>
+        <div class="row__key key_wide" data-key="del"><i class="far fa-times-circle" data-key="del"></i></div>
       </div>
 
     </div>
