--- a/templates/partials/end.hbs
+++ b/templates/partials/end.hbs
@@ -1,9 +1,9 @@
 <div class="end overlay">
-  <div class="end overlay-details">
-    <div class="end-word">
+  <div class="end overlay__details">
+    <div class="end__word">
 
     </div>
-    <div class="end-timer">
+    <div class="end__timer">
       Next word in <br><span class="next-timer"></span>
     </div>
   </div>
