--- a/templates/partials/info.hbs
+++ b/templates/partials/info.hbs
@@ -1,5 +1,5 @@
 <div class="info overlay">
-  <div class="info overlay-details">
+  <div class="info overlay__details">
     Hi! This is my version of Wordle/Jotto, a popular word guessing game (but you probably already know that).
 
     <br><br>
